fixed contact button layout issue

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -74,8 +74,8 @@
 }
 
 #contact {
-  margin-top: 10%;
-  height: 15vh;
+  margin-top: 50%;
+  height: 20vh;
 }
 /* For Desktop */
 @media (min-width: 750px) {
